# hermes-agent-self-evolution

./: .evolution_checkpoint  .gitignore  PAUL_AGENT_STATUS.md  README.md  bootstrap.sh  generate_report.py  pyproject.toml  run_evolution.sh
.github/workflows/: ci.yml
config/: universal-evolution.yaml
evolution/code/: code_organism.py  mutator.py  sandbox.py
evolution/core/: config.py  constraints.py  cost.py  dataset_builder.py  delivery.py  eval_integrity.py  external_importers.py  fitness.py  governance.py  group_session_miner.py  integration_adapter.py  phase_gate.py  preflight.py  reproducibility.py
evolution/monitor/: loop.py  triage.py
evolution/prompts/: evolve_prompt_section.py  prompt_dataset.py  prompt_loader.py  prompt_module.py
evolution/rl/: atropos_adapter.py
evolution/skills/: evolve_skill.py
evolution/tools/: evolve_tool.py  tool_module.py
evolution_v2/: evolution_mem0_bridge.py  live_state_evolution.py  rich_intelligence.py  streaming_evolution_engine.py
reports/: evolution_2026-06-03.md  evolution_2026-06-06.md  evolution_fast_2026-06-02.md  evolution_report_20260529_030000.md  evolution_report_20260531_030054.md  evolution_report_20260601_030019.md  nous_intelligence_20260528.md  nous_intelligence_20260529.md  nous_intelligence_20260531.md  nous_intelligence_20260601.md  nous_intelligence_20260602.md  nous_intelligence_20260603.md  nous_intelligence_20260604.md  nous_intelligence_20260605.md  nous_intelligence_20260606.md  nous_intelligence_20260607.md  nous_intelligence_20260609.md
state/: hermes-compression-eval.state
tests/code/: test_mutator.py  test_sandbox.py
tests/core/: test_constraints.py  test_cost.py  test_delivery.py  test_fitness_feedback.py  test_preflight.py
tests/monitor/: test_triage.py
tests/prompts/: test_prompt_loader.py
tests/skills/: test_evolve_skill.py  test_skill_module.py
(+1 files in other folders)
